--- a/Sample Background/style.css
+++ b/Sample Background/style.css
@@ -2,70 +2,34 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    background-image: linear-gradient(80deg, rgb(5, 124, 172), rgb(199, 10, 114));
     overflow: hidden;
+    background-color: #FDFBEE;
 }
 
-#up{
-    position: absolute;
-    height: 800px;
-    width: 800px;
-    border-radius: 50%;
-    background-image: linear-gradient(80deg, rgb(5, 124, 172), rgba(43, 247, 202, 0.5));
-    filter: blur(80px);
-    animation: down 10s infinite;
-}
-
-#down{
-    position: absolute;
-    right: 0;
-    height: 500px;
-    width: 500px;
-    border-radius: 50%;
-    background-image: linear-gradient(80deg, rgb(245, 207, 82, 0.8), rgba(199, 10, 114));
-    filter: blur(80px);
-    animation: up 10s infinite;
-}
 
 #left{
     position: absolute;
-    height: 500px;
-    width: 500px;
-    border-radius: 50%;
-    background-image: linear-gradient(80deg, rgb(5, 124, 172), rgba(183, 253, 52, 0.8));
-    filter: blur(80px);
-    animation: left 30s infinite;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(80deg, rgb(5, 124, 172), rgba(23, 138, 247, 0.8));
+    animation: left 10s infinite;
+    filter: blur(100px);
+    opacity: 0.7;
+
+
 }
 
 #right{
     position: absolute;
-    height: 500px;
-    width: 500px;
-    border-radius: 50%;
-    background-image: linear-gradient(80deg, rgba(26, 248, 18, 0.6), rgba(199, 10, 52, 0.8));
-    filter: blur(80px);
-    animation: right 30s infinite;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(80deg, rgba(247, 45, 210, 0.929), rgba(204, 89, 250, 0.8));
+    filter: blur(100px);
+    animation: right 10s infinite;
+    opacity: 0.7;
+
 }
 
-@keyframes down {
-    0%,100%{
-        top: -100px;
-    }
-    70%{
-        top: 700px;
-    }
-    
-}
-
-@keyframes up {
-    0%,100%{
-        bottom: -100px;
-    }
-    70%{
-        bottom: 700px;
-    }
-    
-}
 
 @keyframes left {
     0%,100%{
